     name (`man1m`), as different OS distributions have different preferences
     in this regard. [#2950]
   * Option to `configure --enable-docs-man-for-progs-built-only` was added,
     to differentiate NUT builds that deliver man pages for only built programs
     (legacy default) or for all of them (as needed for docs sites). [#2976]

 - The `BUILD_TYPE=default-all-errors ci_build.sh` script handling was
   revised to simplify code, and to default in CI builds to a quicker
   mode which randomly mixes the selected SSL, USB and UNMAPPED variants
   (and relies on the dozens of NUT CI farm runs per iteration to likely
   cover all possible combinations), which should roughly halve the CI
   build times. Default activity for developer builds should remain as
   it was -- to try each such "axis" sequentially. [#2973]


Release notes for NUT 2.8.3 - what's new since 2.8.2
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/11

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2:
   * Move of `NUT_DEBUG_LEVEL` and "-D" CLI option handling to start of
     driver programs for issue #2259 in NUT v2.8.2 release misfired with
     regard to data-dump mode (it no longer caused foreground by default).
     [#2408]
   * The `nut-driver-enumerator.sh` improvements misfired in v2.8.2 release
     with an overlooked bit of shell syntax, and caused `nut-driver@upsname`
     instances to not auto-restart when `ups.conf` is edited. [#682, #2410]
   * Addition of "NUT Simulated devices" support to `nut-scanner` in v2.8.2
     broke detection of (in-)ability to find and query "Old NUT" servers via
     `libupsclient.so` (internal flag got always enabled). [#2246]
   * A fix for `upsmon` v2.8.1 setting of `OFFDURATION` [PR #2108, issue #2104,
     revisiting PR #2055, issue #2044] was overly zealous and impacted also
     the `OB` state in cases where communications to the data server were