@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3529 utf-8
+personal_ws-1.1 en 3530 utf-8
 AAC
 AAS
 ABI
@@ -1760,6 +1760,7 @@ cgi
 cgipath
 cgroup
 cgroupsv
+changelog
 chargetime
 charset
 checkruntime
